lore-error-set/tests/compile_fail/forward_strict_missing_variant.stderr
error[E0277]: `NarrowTarget` does not declare every variant of the source error set
  --> tests/compile_fail/forward_strict_missing_variant.rs:57:17
   |
57 |     r.forward::<NarrowTarget>("ctx")
   |       -------   ^^^^^^^^^^^^ target missing a source variant
   |       |
   |       required by a bound introduced by this call
   |
help: the trait `Has<Timeout>` is not implemented for `NarrowTarget`
  --> tests/compile_fail/forward_strict_missing_variant.rs:49:1
   |
49 | #[error_set]
   | ^^^^^^^^^^^^
   = note: strict .forward requires the target to declare every variant of the source; see the `Has<…>` requirement below for the specific missing variant. Add the variant to `NarrowTarget` to preserve it.
help: the following other types implement trait `Has<V>`
  --> tests/compile_fail/forward_strict_missing_variant.rs:49:1
   |
49 | #[error_set]
   | ^^^^^^^^^^^^
   | |
   | `NarrowTarget` implements `Has<Internal>`
   | `NarrowTarget` implements `Has<NotFound>`
   = note: required for `NarrowTarget` to implement `HasAll<Cons<Timeout, Nil>>`
   = note: 1 redundant requirement hidden
   = note: required for `NarrowTarget` to implement `HasAll<Cons<NotFound, Cons<Timeout, Nil>>>`
note: required by a bound in `lore_error_set::ForwardStrict::forward`
  --> src/ext.rs
   |
   |     fn forward<Target>(self, context: &str) -> Result<T, Target>
   |        ------- required by a bound in this associated function
   |     where
   |         Target: ErrorSet + crate::set::HasAll<E::Variants>;
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ForwardStrict::forward`
   = note: this error originates in the attribute macro `error_set` (in Nightly builds, run with -Z macro-backtrace for more info)
